--- a/task-outputs-to-inputs/pipeline.yml
+++ b/task-outputs-to-inputs/pipeline.yml
@@ -35,6 +35,7 @@ jobs:
 
       inputs:
       - name: resource-tutorial
+      - name: some-files1
 
       run:
         path: resource-tutorial/task-outputs-to-inputs/show_files.sh
